--- a/app/views/rails_simple_event_sourcing/events/index.html.erb
+++ b/app/views/rails_simple_event_sourcing/events/index.html.erb
@@ -10,8 +10,7 @@
 
 <div class="card">
   <div class="info-bar">
-    <span><%= @paginator.total_count %> event<%= @paginator.total_count == 1 ? "" : "s" %> found</span>
-    <span>Page <%= @paginator.current_page %> of <%= @paginator.total_pages %></span>
+    <span>Events</span>
   </div>
 
   <table>
