--- a/app/views/rails_simple_event_sourcing/events/show.html.erb
+++ b/app/views/rails_simple_event_sourcing/events/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "&larr; Back to events".html_safe, events_path(q: params[:q], page: params[:page]), class: "back-link" %>
+<%= link_to "&larr; Back to events".html_safe, events_path(q: params[:q]), class: "back-link" %>
 
 <div class="card">
   <dl class="detail-grid">
