--- a/app/views/rails_simple_event_sourcing/events/_pagination.html.erb
+++ b/app/views/rails_simple_event_sourcing/events/_pagination.html.erb
@@ -1,23 +1,13 @@
-<% if @paginator.total_pages > 1 %>
+<% if @paginator.prev? || @paginator.next? %>
   <nav class="pagination">
-    <% if @paginator.current_page > 1 %>
-      <%= link_to "Prev", events_path(page: @paginator.current_page - 1, q: params[:q], event_type: params[:event_type], aggregate: params[:aggregate]) %>
+    <% if @paginator.prev? %>
+      <%= link_to "Prev", events_path(before: @paginator.prev_cursor, q: params[:q], event_type: params[:event_type], aggregate: params[:aggregate]) %>
     <% else %>
       <span class="disabled">Prev</span>
     <% end %>
 
-    <% pagination_window(@paginator.current_page, @paginator.total_pages).each do |page| %>
-      <% if page == :gap %>
-        <span class="gap">&hellip;</span>
-      <% elsif page == @paginator.current_page %>
-        <span class="current"><%= page %></span>
-      <% else %>
-        <%= link_to page, events_path(page: page, q: params[:q], event_type: params[:event_type], aggregate: params[:aggregate]) %>
-      <% end %>
-    <% end %>
-
-    <% if @paginator.current_page < @paginator.total_pages %>
-      <%= link_to "Next", events_path(page: @paginator.current_page + 1, q: params[:q], event_type: params[:event_type], aggregate: params[:aggregate]) %>
+    <% if @paginator.next? %>
+      <%= link_to "Next", events_path(after: @paginator.next_cursor, q: params[:q], event_type: params[:event_type], aggregate: params[:aggregate]) %>
     <% else %>
       <span class="disabled">Next</span>
     <% end %>
